	-> HTR sharing dialog accessible via right-click context menu
	-> CITlab HTR configuration allows to select integrated dictionary or language model built from its train data set (available for models trained after 6.11.2018 [sic])
	-> bugfix: baselines were associated to wrong parent shapes on splitting with custom line
	-> CITlab HTR+ display bugfix: the model used for recognition is the one from the last epoch => display CER values from final training iteration.
	-> added Text2Image options
	
1.10.1:
	-> P2PaLA train dialog - "Analyze structure types" fixes
	-> HTR configuration dialog bugfix: did not load when stored configuration contained a deleted model
	-> fix a memory leak in CanvasImage
	-> xlsx export: concat continued tags
	
1.11.0:
	-> integrate baseline error rate tool
	-> improve P2PaLA train dialog - check structures and merged-structures consistency
	-> status change of one page is checked for reasonableness and creates new transcript version
	-> label existing layouts using P2PaLA
	-> Export option to export a text file for each selected page
	-> severe bugfix: update JRE for MacOS to version 8u251 to support server certificate 
	-> paged htr model tables
	
1.12.0:
	-> (PyLaia) training from compressed viewing files 
	-> bugfix: reading order after merge
	-> bugfix: editing pagination in the document manager dialog could lead to errors in the following save operations 
	-> PDF export: PDFs are much smaller now! for binarized images choosing 'Original' as image type delivers the smallest size, in most other cases 'JPEG'
	-> add collection doclist export as CSV (via green arrow-down button in the doclist toolbar)
	-> main menu: user can choose to load last modified document in Transkribus at start time
	-> HTR model lists are now all represented as tree or table widget pagination
	-> Undo a job (see the 'Jobs Overview': 'Undo button' will be enabled if the docID of the job corresponds to the ID of the currently loaded document)
	
	